parkrun-stats - More datasource tidy up.